@@ -1,5 +1,6 @@
 2.4.0
 -----
+1. Add 'Read offset' setting for AudioCDs.
 
 2.3.3
 -----
